# CubeX

./: .gitignore  Cargo.toml  README.md  TODO.md
crates/cubex-cli/: Cargo.toml
crates/cubex-cli/src/: main.rs
crates/cubex-cli/tests/: cli_errors.rs
crates/cubex-core/: Cargo.toml
crates/cubex-core/src/: config.rs  engine.rs  error.rs  lib.rs  routing.rs
crates/cubex-plugin-sdk/: Cargo.toml
crates/cubex-plugin-sdk/src/: lib.rs
crates/cubex-protocol/: Cargo.toml
crates/cubex-protocol/src/: lib.rs
crates/cubex-store/: Cargo.toml
crates/cubex-store/src/: lib.rs
crates/cubex-strategy/: Cargo.toml
crates/cubex-strategy/src/: ast.rs  compiler.rs  error.rs  grammar.pest  lib.rs  parser.rs  tests.rs
crates/cubex-wasm-plugin-sdk/: Cargo.toml
crates/cubex-wasm-plugin-sdk/src/: lib.rs
docs/: architecture.md  configuration.md  plugin-guide.md  strategy-language.md
examples/access-control/: cubex.cx  cubex.toml
examples/alice-bob/: cubex.cx  cubex.toml  message.txt
examples/blp/: alice-read-runbook.txt  bob-read-finance.txt  carol-write-public.txt  cubex.cx  cubex.toml  ingest-write-vault.txt
examples/bytes-flow/: cubex.cx  cubex.toml
examples/crypto/: cubex.cx  cubex.toml
examples/diagnostics/bad/: equivalent-route-predicates.cx  unknown-source.cx  unreachable-route.cx
examples/diagnostics/warning/: unused-declarations.cx
examples/file-flow/: cubex.cx  cubex.toml  input.txt
examples/hello/: cubex.cx  cubex.toml
examples/network/: cubex.cx  cubex.toml
examples/plugin-project/: Cargo.toml  cubex.cx  cubex.toml
examples/plugin-project/src/: main.rs
examples/record-route/: cubex.cx  cubex.toml  input.txt
examples/record-store/: cubex.cx  cubex.toml  delete.cx  delete.toml  delete.txt  get.cx  get.toml  list.cx  list.toml  replay.cx  replay.toml
examples/register-bank/: cubex.cx  cubex.toml
examples/strategy/: hello.cx
examples/strategy/common/: plugins.cx  predicates.cx
examples/timer/: cubex.cx  cubex.toml
examples/wasm-access-control/: cubex.cx  cubex.toml
examples/wasm-bytes-flow/: cubex.cx  cubex.toml
examples/wasm-crypto/: cubex.cx  cubex.toml
examples/wasm-file-flow/: cubex.cx  cubex.toml  input.txt
examples/wasm-hello/: cubex.cx  cubex.toml
examples/wasm-network/: cubex.cx  cubex.toml
examples/wasm-process-hello/: cubex.cx  cubex.toml
examples/wasm-random/: cubex.cx  cubex.toml
examples/wasm-record-store/: cubex.cx  cubex.toml
examples/wasm-register-bank/: cubex.cx  cubex.toml
examples/wasm-timer/: cubex.cx  cubex.toml
plugins/: README.md
plugins/access-policy-plugin/: Cargo.toml
plugins/access-policy-plugin/src/: main.rs
plugins/blp-policy-plugin/: Cargo.toml
plugins/blp-policy-plugin/src/: main.rs
plugins/echo-plugin/: Cargo.toml
plugins/echo-plugin/src/: main.rs
plugins/file-sink-plugin/: Cargo.toml
plugins/file-sink-plugin/src/: main.rs
plugins/file-source-plugin/: Cargo.toml
plugins/file-source-plugin/src/: main.rs
plugins/hello-plugin/: Cargo.toml
plugins/hello-plugin/src/: main.rs
plugins/print-plugin/: Cargo.toml
plugins/print-plugin/src/: main.rs
plugins/record-source-plugin/: Cargo.toml
plugins/record-source-plugin/src/: main.rs
plugins/record-store-plugin/: Cargo.toml
plugins/record-store-plugin/src/: main.rs
plugins/register-bank-plugin/: Cargo.toml
plugins/register-bank-plugin/src/: main.rs
plugins/register-client-plugin/: Cargo.toml
plugins/register-client-plugin/src/: main.rs
plugins/sha256-plugin/: Cargo.toml
plugins/sha256-plugin/src/: main.rs
plugins/tcp-client-plugin/: Cargo.toml
plugins/tcp-client-plugin/src/: main.rs
plugins/tcp-echo-plugin/: Cargo.toml
plugins/tcp-echo-plugin/src/: main.rs
plugins/timer-plugin/: Cargo.toml
plugins/timer-plugin/src/: main.rs
plugins/wasm-access-policy-plugin/: Cargo.toml
plugins/wasm-access-policy-plugin/src/: lib.rs
plugins/wasm-echo-plugin/: Cargo.toml
plugins/wasm-file-sink-plugin/: Cargo.toml
plugins/wasm-file-source-plugin/: Cargo.toml
plugins/wasm-hello-plugin/: Cargo.toml
plugins/wasm-print-plugin/: Cargo.toml
plugins/wasm-random-plugin/: Cargo.toml
plugins/wasm-record-source-plugin/: Cargo.toml
plugins/wasm-record-store-plugin/: Cargo.toml
plugins/wasm-register-bank-plugin/: Cargo.toml
plugins/wasm-register-client-plugin/: Cargo.toml
plugins/wasm-sha256-plugin/: Cargo.toml
plugins/wasm-tcp-client-plugin/: Cargo.toml
plugins/wasm-tcp-echo-plugin/: Cargo.toml
plugins/wasm-timer-plugin/: Cargo.toml
scripts/: smoke.sh
(+14 files in other folders)
