[workspace]
members = [
    "crates/cubex-cli",
    "crates/cubex-core",
    "crates/cubex-plugin-sdk",
    "crates/cubex-protocol",
    "crates/cubex-store",
    "crates/cubex-wasm-plugin-sdk",
    "examples/plugin-project",
    "plugins/access-policy-plugin",
    "plugins/echo-plugin",
    "plugins/file-sink-plugin",
    "plugins/file-source-plugin",
    "plugins/hello-plugin",
    "plugins/print-plugin",
    "plugins/record-source-plugin",
    "plugins/record-store-plugin",
    "plugins/register-client-plugin",
    "plugins/sha256-plugin",
    "plugins/register-bank-plugin",
    "plugins/tcp-client-plugin",
    "plugins/tcp-echo-plugin",
    "plugins/timer-plugin",
    "plugins/wasm-access-policy-plugin",
    "plugins/wasm-echo-plugin",
    "plugins/wasm-file-sink-plugin",
    "plugins/wasm-file-source-plugin",
    "plugins/wasm-hello-plugin",
    "plugins/wasm-print-plugin",
    "plugins/wasm-random-plugin",
    "plugins/wasm-record-source-plugin",
    "plugins/wasm-record-store-plugin",
    "plugins/wasm-register-bank-plugin",
    "plugins/wasm-register-client-plugin",
    "plugins/wasm-sha256-plugin",
    "plugins/wasm-tcp-client-plugin",
    "plugins/wasm-tcp-echo-plugin",
    "plugins/wasm-timer-plugin",
]
resolver = "3"

[workspace.package]
edition = "2024"
license = "MIT"
version = "0.1.0"

[workspace.dependencies]
anyhow = "1.0"
bincode = "1.3"
clap = { version = "4.5", features = ["derive"] }
getrandom = "0.3"
serde = { version = "1.0", features = ["derive"] }
sha2 = "0.10"
thiserror = "2.0"
toml = "0.9"
uuid = { version = "1.18", features = ["serde"] }
wasmtime = "38.0.4"

[profile.release]
lto = "thin"
strip = "symbols"
