[package]
name = "cubex-cli"
edition.workspace = true
license.workspace = true
version.workspace = true

[[bin]]
name = "cubex"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
cubex-core = { path = "../cubex-core" }
cubex-protocol = { path = "../cubex-protocol" }
cubex-strategy = { path = "../cubex-strategy" }
cubex-store = { path = "../cubex-store" }
toml.workspace = true
