[package]
name = "cubex-protocol"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
bincode.workspace = true
serde.workspace = true
thiserror.workspace = true
uuid.workspace = true

[target.'cfg(not(all(target_arch = "wasm32", target_os = "unknown")))'.dependencies]
uuid = { workspace = true, features = ["v4"] }
